syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService.Server";

package chat;

service Chat {
  rpc SendMesage (stream ClientToServerMessage) returns (stream ServerToClientMessage);
}

message ClientToServerMessage {
  string text = 1;
}

message ServerToClientMessage {
  string text = 1;
  google.protobuf.Timestamp timestamp = 2;
}
